# ducky-learn

./: Cargo.toml  README.md
.github/workflows/: cargo-publish.yml
.swm/: dense1d-layer.xazt8.sw.md  swimm.json
examples/: mnist.rs
src/: activations.rs  cost.rs  feature_extraction.rs  layers.rs  lib.rs  naive_bayes.rs  optimizers.rs  train.rs  util.rs
