[package]
name = "ducky-learn"
version = "0.1.0"
authors = ["Chris Graham <ChrisGraham908@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple Deep Learning rust framework"
documentation = "https://docs.rs/ducky-learn/latest/ducky_learn/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
mnist = "0.5.0"

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
